# bank_transactions_analisis

./: .env_example  README.md  READMY.md  pyproject.toml
src/: main.py  read_data.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py
